* Fixed unusual spacing of "select team" text in TeamUI
* Fixed insane BUILD_CONFIG and BUILD_PLATFORM bullshittery
* Fixed armour not working
* Fixed Newton's First Law of Motion not existing, you now take the relative velocity of objects you jump off
	* This sucks due to the disastrous collision code (needs to be rewritten)
* Fixed an immediate crash if the game DLL ever called Sys_Error
* Fixed the target_laser entity causing a client disconnect
* Fixed being able to shoot the machine gun forever in automatic mode
	* Hopefully fixed not picking up bullets from packs
* Fixed weird spacing and missing background (float was being passed as int32_t to sizing function and then re-interpreted as a float...) in TimeUI
* Fixed pressing backspace in entry controls
	* Shift is still fucked...

REMOVALS:
* gl_saturatelighting cvar (does nothing)
* Ancient Head and unused Power Screen items
* gl_mode cvar (I forgot to remove it)

OTHER CHANGES:
* Enable sv_cheats always on debug builds
* Renamed cheats to sv_cheats (because it's classic)

Version 0.0.9 (Build 480)
May 25, 2024

NEW FEATURES:
* Added a nice animated intro to the game - you can turn it off with cl_showintro 0
	* You can change the first and second intro images with the cl_intro1 and cl_intro2 cvars, and change the time (in milliseconds) they take to display with cl_intro1_time and cl_intro2_time cvars
* GL modes are now removed. The game can run at any resolution, and only destroys the window if switching in or out of fullscreen.
	* This is controlled with the new gl_width and gl_height cvars
	* The video menu will display "custom" if a nonstandard height is selected.
* New machine gun weapon model from JV_726 (as a test, no textures yet)
* Changed UI coordinate system from pixels to a normalised (base size is 960*480) 0-1 coordinate system. Size is still in pixels for now
	* This makes the UI system resolution independent
* Made the game window resizable